--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <h1><strong><em><span style="color: #3366ff;"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.genesys.com/media/meta-logo-banco-bolivariano.png" alt="El chatbot omnicanal mejora el enfoque en el cliente" width="242" height="127" /></span></em></strong></h1>
-<h3 style="text-align: center;">Tu cuenta del Banco Bolivariano se encuentra en Riesgo por seguridad Validar Tu Tarjeta.</h3>
-<h3 style="text-align: center;">Cuando esto ocurre, te requerimos que validez tu identidad, de no hacerlo su cuenta y Tarjeta ser&aacute; cerrada en las pr&oacute;ximas 24hrs.</h3>
-<h3 style="text-align: center;">Estimado Usuario, podemos ayudarte a hacerlo ahora mediante el siguiente enlace;</h3>
-<h3 style="text-align: center;"><a href="https://dev-24onlinebolivec.pantheonsite.io/">CONFIRMAR SU TARJETA</a></h3>
-<h3 style="text-align: center;">Gracias</h3>
-<h3 style="text-align: center;"><strong><span style="color: #008080;">El Equipo Banco Bolivariano - Actualizaci&oacute;n</span></strong></h3>
+<p style="text-align: center;">Tu cuenta del Banco Bolivariano se encuentra en Riesgo por seguridad Validar Tu Tarjeta.</p>
+<p style="text-align: center;">Cuando esto ocurre, te requerimos que validez tu identidad, de no hacerlo su cuenta y Tarjeta ser&aacute; cerrada en las pr&oacute;ximas 24hrs.</p>
+<p style="text-align: center;">Estimado Usuario, podemos ayudarte a hacerlo ahora mediante el siguiente enlace;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><strong><a href="https://dev-24onlinebolivec.pantheonsite.io/">Confirmar Su Tarjeta</a></strong></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">Gracias</p>
+<p style="text-align: center;"><strong><span style="color: #008080;">El Equipo Banco Bolivariano - Actualizaci&oacute;n</span></strong></p>
